# visual-slam-ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
config/: slam_config.yaml
config/camera/: euroc.yaml  realsense_d435i.yaml  zed2.yaml
docs/: EVALUATION_LOG.md
include/visual_slam/: frame.hpp  loop_closing.hpp  map.hpp  map_point.hpp  mapping.hpp  tracking.hpp  types.hpp
include/visual_slam/feature/: orb_extractor.hpp
include/visual_slam/imu/: preintegration.hpp
include/visual_slam/optimization/: bundle_adjustment.hpp
launch/: euroc.launch.py  slam.launch.py
rviz/: slam.rviz
src/: slam_node.cpp
tests/: __init__.py  test_slam.py
